# musiqasik

./: .dev.vars.example  .env.example  .envrc  .envrc.local.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  PHASE2_EXECUTIVE_SUMMARY.md  PHASE2_VERIFICATION_REPORT.md  README.md  biome.json  bun.lockb  bunfig.toml  devenv.nix  devenv.yaml  docker-compose.yml  eslint.config.js  history.txt  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.server.json  tsconfig.worker.json  vite.config.ts  vitest.config.ts  wrangler.toml
.Jules/: bolt.md  palette.md  sentinel.md
.jules/: bolt.md  palette.md  sentinel.md
agent_docs/: README.md  architecture-patterns.md  code-conventions.md  common-tasks.md  development-workflow.md  effect.md  troubleshooting.md
coverage/: coverage-final.json  index.html
docs/: README.md  architecture-patterns.md  code-conventions.md  common-tasks.md  development-workflow.md  devenv-setup.md  troubleshooting.md
e2e/: README-BENCHMARKS.md  home.spec.ts  map-view.spec.ts  navigation.spec.ts  search-race-condition.spec.ts  wasm-benchmarks.spec.ts  wasm-loading.spec.ts
hack/: create_worktree.sh
playwright-report/: index.html
rust/graph-wasm/: Cargo.toml  build.sh
rust/graph-wasm/src/: graph_processor.rs  lib.rs  types.rs
scripts/: check-services.sh  check-surrealdb.sh  dev-utils.sh
server/: api.ts  config.ts  handlers.ts  index.ts
src/: App.tsx  index.css  vite-env.d.ts
supabase/: config.toml
surrealdb/: schema.surql
(+197 files in other folders)
