[package]
name = "graph-wasm"
version = "0.1.0"
edition = "2021"
authors = ["MusiqasiQ Team"]
description = "WebAssembly graph processing module for MusiqasiQ"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
small = ["talc"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# Modern WASM allocator (replaces deprecated wee_alloc)
# talc provides better performance and is actively maintained
[dependencies.talc]
version = "4"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
